display changes and text for maximum price

--- a/app/assets/stylesheets/reservations/index.scss
+++ b/app/assets/stylesheets/reservations/index.scss
@@ -154,6 +154,10 @@
   text-align: center;
 }
 
+.max-symbol {
+  margin-right: 10px;
+}
+
 @media screen and (max-width: 768px) {
   .left-recap {
     flex: 0 0 100%;
