--- a/app/views/campaigns/_participation.html.erb
+++ b/app/views/campaigns/_participation.html.erb
@@ -33,7 +33,7 @@
       <div class="participation-input">
         <%= f.collection_radio_buttons :answer, [["Yes", "J'en profite"] ,["No", "Prix pas assez attractif"]], :first, :last %>
       </div>
-      <p class="yes-outcome">Vous vous assurez de pourvoir profiter de la promo pour un maximum de <%= sprintf('%.2f', @pick.price) %>. En bonus, si le prix que nous avons négocié est par exmple égal à <%= sprintf('%.2f', @pick.price * 0.9) %> €, vous profiterez de la promo à  <%= sprintf('%.2f', @pick.price * 0.9) %> € !</p>
+      <p class="yes-outcome">Vous vous assurez de pourvoir profiter de la promo pour un maximum de <%= sprintf('%.2f', @pick.price) %> €. En bonus, si le prix que nous avons négocié est par exemple égal à <%= sprintf('%.2f', @pick.price * 0.9) %> €, vous profiterez de la promo à  <%= sprintf('%.2f', @pick.price * 0.9) %> € !</p>
       <p class="no-outcome">Vous aimez <%= @product.title %> mais une promo à <%= sprintf('%.2f', @pick.price) %> € ne vous convainc pas à l'acheter ? Faites le savoir en validant le sondage. Si <%= sprintf('%.2f', @pick.price) %> € est supérieur au prix que nous avons négocié pour vous, vous pourrez profiter du prix négocié à la fin de la campagne. En revanche, si <%= sprintf('%.2f', @pick.price) %> € est déjà le meilleur prix négocié, vous ne pourrez pas profiter de ce prix négocié à la fin de la campagne.</p>
 
       <%= f.button :submit, "Valider", class: "btn-blue", id:"ab-cta" %>
