--- a/app/views/picks/show.html.erb
+++ b/app/views/picks/show.html.erb
@@ -57,7 +57,7 @@
                   <% if @product.expedition_costs.present? %>
                     Vous êtes assuré de bénéficier du meilleur prix promotionnel. La carte renseignée ci-dessous sera débitée à la fin de la campagne d'un montant inférieur ou égal à <%= sprintf('%.2f', @product.expedition_costs + @pick.price) %>€ (livraison comprise).
                   <% else %>
-                  Vous êtes assuré du meilleur prix promotionnel. La carte renseignée ci-dessous sera débitée à la fin de la campagne d'un montant inférieur ou égal à <%= sprintf('%.2f', @pick.price) %>€.
+                  Vous êtes assuré de bénéficier du meilleur prix promotionnel. La carte renseignée ci-dessous sera débitée à la fin de la campagne d'un montant inférieur ou égal à <%= sprintf('%.2f', @pick.price) %>€.
                   <% end %>
                 <% end %>
               </div>
