--- a/app/views/campaigns/_campaign.html.erb
+++ b/app/views/campaigns/_campaign.html.erb
@@ -7,8 +7,34 @@
         <h3><%= campaign.product.title.capitalize %></h3>
         <p class="product-description"><%= campaign.product.description.capitalize.first(40) %></p>
       </div>
-      <div class="product-category">
-        <p class="<%= campaign.category.name.downcase.gsub('é', 'e')%>"> <%= campaign.category.name %></p>
+      <div class="bottom-sexion">
+        <div class="product-category">
+          <p class="<%= campaign.category.name.downcase.gsub('é', 'e')%>"> <%= campaign.category.name %></p>
+        </div>
+        <div class="social-overview">
+          <% if Pick.view?(@user.id, campaign.id) %>
+            <div class="icon-and-number done-by-user">
+              <div class="glyphicon glyphicon-eye-open"></div>
+              <p><%= campaign.views%></p>
+            </div>
+          <% else %>
+            <div class="icon-and-number">
+              <div class="glyphicon glyphicon-eye-open"></div>
+              <p><%= campaign.views%></p>
+            </div>
+          <% end %>
+          <% if Pick.pending?(@user.id, campaign.id) %>
+            <div class="icon-and-number done-by-user">
+              <%= image_tag "blue-icon.png", class: "pick-icon" %>
+              <p class="picks-counter"><%= campaign.picks.count%></p>
+            </div>
+          <% else %>
+            <div class="icon-and-number">
+              <%= image_tag "gray-icon.png", class: "pick-icon" %>
+              <p class="picks-counter"><%= campaign.picks.count%></p>
+            </div>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
