--- a/app/views/users/my_campaigns.html.erb
+++ b/app/views/users/my_campaigns.html.erb
@@ -11,7 +11,7 @@
         <p>Retrouvez ici l'historique de vos participations aux campagnes.
          </p>
          <%= link_to campaigns_path do %>
-          <div class="btn-blue">Retour aux campagnes en cours</div>
+          <div class="btn-white">Retour aux campagnes en cours</div>
          <% end %>
       </div>
       <div class="right-part product-feed">
