--- a/app/views/campaigns/_campaign.html.erb
+++ b/app/views/campaigns/_campaign.html.erb
@@ -12,7 +12,7 @@
           <p class="<%= campaign.category.name.downcase.gsub('é', 'e')%>"> <%= campaign.category.name %></p>
         </div>
         <div class="social-overview">
-          <% if Pick.view?(@user.id, campaign.id) %>
+          <% if Pick.campaign_viewed_by_user?(@user.id, campaign.id) %>
             <div class="icon-and-number done-by-user">
               <div class="glyphicon glyphicon-eye-open"></div>
               <p><%= campaign.views%></p>
@@ -23,15 +23,15 @@
               <p><%= campaign.views%></p>
             </div>
           <% end %>
-          <% if Pick.pending?(@user.id, campaign.id) %>
+          <% if Pick.campaign_picked_by_user?(@user.id, campaign.id) %>
             <div class="icon-and-number done-by-user">
               <%= image_tag "blue-icon.png", class: "pick-icon" %>
-              <p class="picks-counter"><%= campaign.picks.count%></p>
+              <p class="picks-counter"><%= campaign.added_to_cart.count%></p>
             </div>
           <% else %>
             <div class="icon-and-number">
               <%= image_tag "gray-icon.png", class: "pick-icon" %>
-              <p class="picks-counter"><%= campaign.picks.count%></p>
+              <p class="picks-counter"><%= campaign.added_to_cart.count%></p>
             </div>
           <% end %>
         </div>
