add link to update campaign with pick id choosed

--- a/app/views/campaigns/promo.html.erb
+++ b/app/views/campaigns/promo.html.erb
@@ -75,7 +75,12 @@
       </div>
       <div class="data-block">
         <h3>Commandes à valider</h3>
-          <%= render 'data-campaign' %>
+        <% if @campaign.ab_campaign? %>
+          <%= render 'data-campaign-ab' %>
+        <% else %>
+          <%= render 'data-campaign-open' %>
+        <% end %>
+
       </div>
 
     </div>
