--- a/app/assets/stylesheets/campaigns/promo.scss
+++ b/app/assets/stylesheets/campaigns/promo.scss
@@ -100,12 +100,37 @@ td, th {
   text-align: center;
 }
 
+td:last-child {
+  padding: 0;
+}
+
 .orders {
   margin-top: 20px;
   padding: 20px;
   background-color: #f1f8fc;
   text-align: justify;
   display: inline-block;
+}
+
+.finalize-campaign-cta {
+  cursor: pointer;
+  color: #FFF;
+  text-shadow: 0 1px 0 #ce870c;
+  background-color: #f9b43b;
+  -webkit-box-shadow: 0 7px 13px -3px rgba(45,35,66,0.3), 0 2px 4px 0 rgba(45,35,66,0.4), inset 0 -2px 0 0 #4b58ba;
+  box-shadow: 0 7px 13px -3px rgba(45,35,66,0.3), 0 2px 4px 0 rgba(45,35,66,0.4), inset 0 -2px 0 0 #ce870c;
+  transition: box-shadow 0.15s ease, transform 0.15s ease, -webkit-box-shadow 0.15s ease, -webkit-transform 0.15s ease;
+
+
+  &:hover {
+    -webkit-box-shadow: 0 5px 8px -1px rgba(45,35,66,0.3), 0 4px 5px 0 rgba(45,35,66,0.4), inset 0 -2px 0 0 #ce870c;
+    box-shadow: 0 5px 8px -1px rgba(45,35,66,0.3), 0 4px 5px 0 rgba(45,35,66,0.4), inset 0 -2px 0 0 #ce870c;
+    -webkit-transform: translateY(-1px);
+    -ms-transform: translateY(-1px);
+    transform: translateY(-1px);
+    color: white;
+  }
+  padding: 5px;
 }
 
 @media(max-width: 768px) {
