--- a/app/views/users/my_campaigns.html.erb
+++ b/app/views/users/my_campaigns.html.erb
@@ -21,7 +21,7 @@
           </div>
           <%= render "my_picks", picks: @picks %>
         <% else %>
-          <h4>Vous n'avez encore participé à aucune campagne</h4>
+          <h4>Vous ne participez actuellement à aucune campagne</h4>
         <% end %>
       </div>
     </div>
