--- a/app/views/picks/edit.html.erb
+++ b/app/views/picks/edit.html.erb
@@ -1,76 +1,13 @@
+<script src="https://js.stripe.com/v3/"></script>
 <%= render 'shared/navbar' %>
-<%= render 'users/right-links-dashboard' %>
-<div class="dashboard-container">
-  <%= render 'users/dashboard-navigation' %>
-    <div class="general-infos">
-      <h5 id="ending-date">Payer <%= @product.title %></h5>
-      <div class="two-parts">
-        <div class="left-recap">
-          <h5 id="recap">Récap</h5>
-          <%= render 'reservations/recap', product: @product %>
-        </div>
-        <div class="right-forms">
-          <div class="delivery">
-            <h5 id="address-top"><%= @product.expedition_costs.present? ? "Livraison" : "Facturation" %></h5>
-            <div class="info-bloc">
-              <div class="info-detail">
-                <% if @pick.campaign.open_type? %>
-                  <% if @product.expedition_costs.present? %>
-                    Adresse à laquelle vous souhaitez être livré si votre proposition est retenue.
-                  <% else %>
-                    Adresse de facturation si votre proposition est retenue.
-                  <% end %>
-                <% else %>
-                  <% if @product.expedition_costs.present? %>
-                    Adresse de livraison.
-                  <% else %>
-                    Adresse de facturation
-                  <% end %>
-                <% end %>
-              </div>
-              <div class="address-infos">
-                <div class="addres-bloc">
-                <div><%= @pick.delivery_infos["first_name"] %> <%= @pick.delivery_infos["last_name"] %></div>
-                <div><%= @pick.delivery_infos["street"] %></div>
-                <div><%= @pick.delivery_infos["zip_code"] %> <%= @pick.delivery_infos["city"] %></div>
-                </div>
-                <div class="complement-bloc">
-                  <div class="complement">Infos complémentaires:</div>
-                  <div class="info"><%= @pick.delivery_infos["address_complement"].present? ? @pick.delivery_infos["address_complement"] : "Pas de complément d'adresse" %>
-                  <div class="info"><%= @pick.delivery_infos["phone_number"].present? ? @pick.delivery_infos["phone_number"] : "Pas de numéro de téléphone renseigné"%>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="reservation-encart">
-            <h5>Réservation</h5>
-            <div class="info-bloc">
-              <div class="info-detail">
-                <% if @pick.campaign.open_type? %>
-                  <% if @product.expedition_costs.present? %>
-                    Si nous pouvons obtenir un prix inférieur à <%= sprintf('%.2f', @product.expedition_costs + @pick.price) %>€ (livraison comprise), vous en bénéficierez à la fin de la campagne. La carte débitée sera celle renseignée ci-dessous.
-                  <% else %>
-                    Si nous pouvons obtenir un prix inférieur à <%= sprintf('%.2f', @pick.price) %>€, vous en bénéficierez à la fin de la campagne. La carte débitée sera celle renseignée ci-dessous.
-                  <% end %>
-                <% else %>
-                  <% if @product.expedition_costs.present? %>
-                    Vous êtes assuré de bénéficier du meilleur prix promotionnel. La carte renseignée ci-dessous sera débitée à la fin de la campagne d'un montant inférieur ou égal à <%= sprintf('%.2f', @product.expedition_costs + @pick.price) %>€ (livraison comprise).
-                  <% else %>
-                  Vous êtes assuré du meilleur prix promotionnel. La carte renseignée ci-dessous sera débitée à la fin de la campagne d'un montant inférieur ou égal à <%= sprintf('%.2f', @pick.price) %>€.
-                  <% end %>
-                <% end %>
-              </div>
-              <div class="display-card yellow first-card">
-                <i class="fas fa-credit-card"></i>
-                <span><%= @pick.card["brand"]%></span>
-                <span class="hidden-xs">**** **** **** <%= @pick.card["last4"] %></span>
-                <span><%= @pick.card["exp_month"]%>/<%= @pick.card["exp_year"] %></span>
-              </div>
-          </div>
-        </div>
+<div class="page-container">
+  <div class="campaigns-container" id="feed">
+    <div class="two-parts">
+      <div class="left-recap">
+        <h5 id="recap">Récap</h5>
+        <%= render 'recap', product: @product %>
       </div>
-    </div>
+
   </div>
 </div>
-<%= render 'shared/footer' %>
+<%= render "shared/stripe-form" %>
