added stripe form to pick edit

--- a/app/views/picks/edit.html.erb
+++ b/app/views/picks/edit.html.erb
@@ -14,20 +14,20 @@
             </h5>
             <div class="hidden" id="address-errors">Merci de remplir les informations nécessaires à la validation</div>
             <div class="info-bloc">
-              <%= render 'reservations/address', address: @address %>
+              <%= render 'address', address: @address %>
             </div>
           </div>
-          <% if @address.first_name.present? %>
-            <div class="reservation">
-              <h5 id=reservation-box>Réservation</h5>
-              <div class="info-bloc">
-                Stripe form
-                <div class="loader-container hidden">
-              </div>
+          <div class="reservation">
+            <h5 id=reservation-box>Réservation</h5>
+            <div class="info-bloc">
+              <%= render 'stripe-infos' %>
+              <div class="loader-container hidden">
             </div>
           </div>
-        <% end %>
+        </div>
       </div>
+
+
 
   </div>
 </div>
