--- a/app/views/picks/_stripe-infos.html.erb
+++ b/app/views/picks/_stripe-infos.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag pick_reservations_path(@pick), id: "reservation-form" do %>
+<%= form_tag pick_orders_path(@pick), id: "reservation-form" do %>
   <div class="form-row">
     <label class= "or" for="card-element">
       Carte
@@ -13,7 +13,7 @@
   <div class="validate-form-button">
     <button class="booking-button btn-orange" id="validate-reservation">
       <i class="fa fa-lock"></i>
-      <span>Confirmer réservation</span>
+      <span>Confirmer</span>
     </button>
   </div>
 <% end %>
