able to proceed payment but sends error email and updates pick status to error

--- a/app/views/picks/_recap.html.erb
+++ b/app/views/picks/_recap.html.erb
@@ -17,7 +17,7 @@
   <div class="how-much">
     <div class="text">Prix négocié:</div>
     <% if @pick.campaign.ab_campaign? %>
-      <p class="price"><%= sprintf('%.2f', @pick.campaing.ab_final_price) %> €</p>
+      <p class="price"><%= sprintf('%.2f', @pick.campaign.ab_final_price) %> €</p>
     <% else %>
       <p class="price"><%= sprintf('%.2f', @pick.campaign.price_1) %> €</p>
     <% end %>
@@ -26,7 +26,7 @@
     <div class="how-much last">
       <div class="text"><b>Coût total:</b></div>
       <% if @pick.campaign.ab_campaign? %>
-        <p class="price"><%= sprintf('%.2f', product.expedition_costs + @pick.campaing.ab_final_price) %> €</p>
+        <p class="price"><%= sprintf('%.2f', product.expedition_costs + @pick.campaign.ab_final_price) %> €</p>
       <% else %>
         <p class="price"><%= sprintf('%.2f', product.expedition_costs + @pick.campaign.price_1) %> €</p>
       <% end %>
