--- a/app/views/users/_right-links-dashboard.html.erb
+++ b/app/views/users/_right-links-dashboard.html.erb
@@ -8,7 +8,14 @@
     <%= link_to user_path(@user) do %>
       <div class="link <%= 'selected-category' if @page == 'show'  %>"><i class="fas fa-tachometer-alt"></i> Paramètres</div>
     <% end %>
-    <div class="link"><i class="fas fa-flask"></i> Campagnes</div>
+    <%= link_to my_campaigns_user_path(@user) do %>
+       <div class="pick-menu link <%= 'selected-category' if @page == 'my_campaigns'  %>">
+       <%= image_tag "blue-icon.png", class:"pick-icon" %> Mes campagnes
+       </div>
+     <% end %>
+     <%= link_to my_orders_user_path(@user) do %>
+      <div class="pick-menu link <%= 'selected-category' if @page == 'my_orders'  %>" class="link"><i class="fas fa-clipboard-list"></i>Commandes</div>
+    <% end %>
     <div class="link"><i class="fas fa-question-circle"></i> Aide</div>
     <div class="link"><i class="fas fa-envelope"></i> Nous contacter</div>
     <%= link_to destroy_user_session_path, method: :delete do %>
