--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,35 +12,8 @@
           <span class="tooltiptext">Campagnes</span>
         </div>
       <% end %>
-      <div class="dropdown">
-        <i class="fas fa-bars dropdown-toggle" aria-hidden="true" id="dropdown-icon", data-toggle="dropdown"></i>
-        <ul class="dropdown-menu dropdown-menu-right navbar-dropdown-menu">
-          <li>
-            <%= link_to user_path(current_user) do %>
-              <i class="fas fa-user-circle"></i> <%= t(".profile", default: "Mon compte") %>
-            <% end %>
-          </li>
-          <li>
-            <%= link_to faq_path do %>
-              <i class="fas fa-question-circle"></i> <%= t(".faq", default: "FAQ") %>
-            <% end %>
-          </li>
-          <li>
-            <%= link_to contact_path do %>
-              <i class="fas fa-envelope"></i> <%= t(".contact", default: "Contact") %>
-            <% end %>
-          </li>
-          <li>
-            <%= link_to mentions_legales_path do %>
-              <i class="fas fa-info-circle"></i> <%= t(".legal", default: "Mentions légales") %>
-            <% end %>
-          </li>
-          <li>
-            <%= link_to destroy_user_session_path, method: :delete do %>
-              <i class="fas fa-power-off"></i>  <%= t(".sign_out", default: "Déconnecter") %>
-            <% end %>
-          </li>
-        </ul>
+      <div class="right-links-menu">
+        <i class="fas fa-bars"></i>
       </div>
     </div>
 
