--- a/app/views/users/my_campaigns.html.erb
+++ b/app/views/users/my_campaigns.html.erb
@@ -8,7 +8,7 @@
     <div class="products-container">
       <div class="text-part">
         <h5>Vos campagnes</h5>
-        <p>Retrouvez ici l'historique de vos participations aux campagnes.
+        <p>Retrouvez ici vos participations aux campagnes en cours.
          </p>
       </div>
       <div class="right-part product-feed">
