--- a/app/views/pros/_dashboard-navigation.html.erb
+++ b/app/views/pros/_dashboard-navigation.html.erb
@@ -9,7 +9,7 @@
     <div class="link <%= 'selected-category' if @page == 'campaigns'  %>"><i class="fas fa-flask"></i> Campagnes</div>
   <% end %>
    <%= link_to all_orders_pro_path(@pro) do %>
-    <div class="link <%= 'selected-category' if @page == 'pro_orders'  %>" class="link"><i class="fas fa-clipboard-list"></i>Commandes</div>
+    <div class="link <%= 'selected-category' if @page == 'order'  %>" class="link"><i class="fas fa-clipboard-list"></i>Commandes</div>
   <% end %>
   <div class="link"><i class="fas fa-question-circle"></i> Aide</div>
   <div class="link"><i class="fas fa-envelope"></i> Nous contacter</div>
